# ConectaCEU_MiddlewareServices

./: Dockerfile  README.md  alembic.ini  appsettings.Development.json  appsettings.json  main.py  pyproject.toml
src/API/Controllers/: address_controller.py  attendance_controller.py  auth_controller.py  broadcast_controller.py  class_attendance_controller.py  class_controller.py  class_session_controller.py  course_component_controller.py  course_controller.py  document_controller.py  document_validation_controller.py  enrollment_controller.py  health_controller.py  legal_representative_controller.py  password_reset_controller.py  reference_controller.py  report_controller.py  representative_controller.py  session_controller.py  user_class_controller.py  user_controller.py
src/API/Dependencies/: auth_dependencies.py
src/API/Middleware/: exception_handler.py
src/Application/Services/: address_service.py  auth_service.py  base_service.py  broadcast_service.py  class_attendance_service.py  class_service.py  class_session_service.py  course_component_service.py  course_service.py  document_service.py  document_validation_service.py  legal_representative_service.py  log_services.py  password_reset_service.py  reference_service.py  report_service.py  user_class_service.py  user_password_history_service.py  user_service.py
src/Application/logging/: application_logger.py
src/Application/mappers/: dto_to_entity_mapper.py  entity_to_model_mapper.py  entity_to_view_model_mapper.py  model_to_entity_mapper.py  model_to_view_model_mapper.py  update_mapper.py
src/Data/Models/: address.py  class.py  class_attendance.py  class_attendance_model.py  class_model.py  class_session.py  class_session_model.py  course.py  course_component.py  course_component_model.py  document.py  document_model.py  document_type.py  document_type_model.py  document_validation.py  document_validation_model.py  document_validation_status_type.py  legal_representative.py  legal_representative_model.py  log_application_error_model.py  log_broadcast_message.py  log_broadcast_message_model.py  log_course_creation.py  log_course_creation_model.py  log_document_request.py  log_document_request_model.py  user.py  (+19 more)
src/scripts/: api_health_check.py  process_exclusions.py  process_unjustified_absences.py  setup.py
(+250 files in other folders)
