[tool.poetry]
name = "conectaceu"
version = "0.1.0"
description = ""
authors = []
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.135.3"
uvicorn = {extras = ["standard"], version = "^0.44.0"}
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
pymysql = "^1.1.2"
cryptography = "^46.0.6"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
python-dotenv = "^1.2.2"
python-multipart = "^0.0.24"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.3.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"
mypy = "^1.20.0"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.3.0"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"